@@ -88,6 +88,22 @@ ActionCodeRec  DefaultActionCodeTable[]=
    {LINE_UP,"$kcuu1"},
    {LINE_DOWN,"$kcud1"},
 
+// Movement with block marking
+   {MARK_CHAR_LEFT,"\eO2D"},
+   {MARK_CHAR_RIGHT,"\eO2C"},
+   {MARK_WORD_LEFT,"\eO6D"},
+   {MARK_WORD_RIGHT,"\eO6C"},
+   {MARK_LINE_BEGIN,"\eO2H"},
+   {MARK_LINE_END,"\eO2F"},
+   {MARK_TEXT_BEGIN,"\eO6H"},
+   {MARK_TEXT_END,"\eO6F"},
+//    {MARK_NEXT_PAGE,""},
+//    {MARK_PREV_PAGE,""},
+//    {MARK_PAGE_TOP,""},
+//    {MARK_PAGE_BOTTOM,""},
+   {MARK_LINE_UP,"\eO2A"},
+   {MARK_LINE_DOWN,"\eO2B"},
+
 // Delete actions
    {BACKSPACE_CHAR,"^H"},
    {DELETE_CHAR,"^D"},
@@ -129,7 +145,7 @@ ActionCodeRec  DefaultActionCodeTable[]=
 // Block ops
    {COPY_BLOCK,"$kf11"},
    {MOVE_BLOCK,"$kf12"},
-//   {DELETE_BLOCK,"delete-block"},
+   {DELETE_BLOCK,"$1kf12"},
    {SET_BLOCK_END,"$kf6"},
    {SET_BLOCK_END,"\033|6"},
    {SET_BLOCK_BEGIN,"$kf5"},
@@ -151,6 +167,7 @@ ActionCodeRec  DefaultActionCodeTable[]=
    {MARK_LINE,"$1kf5"},
    {MARK_TO_EOL,"\033|$kf6"},
    {MARK_TO_EOL,"$1kf6"},
+   {YANK_BLOCK,"$1kf11"},
 
 // Search
    {SEARCH_FORWARD,"$kf7"},
